--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,25 @@
 <resources>
     <string name="app_name">SmilaBus</string>
-    <string name="Pop">Попутки</string>
-    <string name="Set">Налаштування</string>
-    <string name="Roz">Розклад Автобусів</string>
-    <string-array name="Nums">3, 4, 5, 9, 10,
-                              13, 17, 18, 30,
-                              32, 34, 35, 36,
-                              37, 39, 40, 41,
-                              45, 48, 49</string-array>
+    <string name="Pop">🚗 Попутки</string>
+    <string name="Set">🔧 Налаштування</string>
+    <string name="Roz">🚌SmilaBus</string>
+    <string name="title_activity_bus">bus</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
+    <string name="title_activity_second">Попутки</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="ssmila">Попутка.Сміла</string>
+    <string name="https_t_me_telecar_cherkassy_geo">Попутки.Черкаси: https://t.me/telecar_cherkassy_geo</string>
+    <string name="https_t_me_popytkasmila">Попутка.Сміла: https://t.me/PopytkaSmila</string>
+    <string name="todo">TODO</string>
+    <string name="infor">Дотримуйтесь карантинних умов під час коронавірусу!</string>
+    <string name="_25_30">Проїзд від 25 до 30 грн.</string>
+
 </resources>
