--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="todo">TODO</string>
     <string name="infor">Дотримуйтесь карантинних умов під час коронавірусу!</string>
     <string name="_25_30">Проїзд від 25 до 30 грн.</string>
+    <string name="action_poputki">Попутки</string>
+    <string name="action_settings">Налаштування</string>
 
     <string-array name="route">
         <item>Маршрут №3</item>
@@ -44,5 +46,21 @@
         <item>Маршрут №48</item>
         <item>Маршрут №49</item>
     </string-array>
+    <string name="title_activity_settings">SettingsActivity</string>
+
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
 
 </resources>
