--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,23 @@
     <string name="app_name">SmilaBus</string>
     <string name="Pop">🚗 Попутки</string>
     <string name="Set">🔧 Налаштування</string>
-    <string name="Roz">🚌SmilaBus</string>
+    <string name="Roz">SmilaBus</string>
     <string name="title_activity_bus">bus</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
+    <string name="tab_text_1">Будні</string>
+    <string name="tab_text_2">Вихідні</string>
+    <string name="tab_text_3">Ціна</string>
     <string name="title_activity_second">Попутки</string>
+    <string name="ssmila">Попутка.Сміла</string>
+    <string name="https_t_me_telecar_cherkassy_geo">Попутки.Черкаси: https://t.me/telecar_cherkassy_geo</string>
+    <string name="https_t_me_popytkasmila">Попутка.Сміла: https://t.me/PopytkaSmila</string>
+    <string name="todo">TODO</string>
+    <string name="infor">Дотримуйтесь карантинних умов під час коронавірусу!</string>
+    <string name="_25_30">Проїзд від 25 до 30 грн.</string>
+    <string name="title_activity_buses">BusesActivity</string>
+    <string name="buss">🚍Обрати автобус</string>
+    <string name="title_activity_select">Обрати маршрут</string>
+    <string name="title_activity_settings">Налаштування</string>
+
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
@@ -15,11 +27,28 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="ssmila">Попутка.Сміла</string>
-    <string name="https_t_me_telecar_cherkassy_geo">Попутки.Черкаси: https://t.me/telecar_cherkassy_geo</string>
-    <string name="https_t_me_popytkasmila">Попутка.Сміла: https://t.me/PopytkaSmila</string>
-    <string name="todo">TODO</string>
-    <string name="infor">Дотримуйтесь карантинних умов під час коронавірусу!</string>
-    <string name="_25_30">Проїзд від 25 до 30 грн.</string>
 
+
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Тема</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Світла/Темна</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+
+    <string name="good">Attention</string>
+    <!-- Preference Titles -->
+    <string name="ui">UI</string>
+    <string name="dark_mode">Dark Mode</string>
+    <string name="dark_mode_def_value">MODE_NIGHT_FOLLOW_SYSTEM</string>
+    <string name="bus_30">Маршрут №30</string>
+    <string name="_30desk">Станція ім. Шевченка - АС-1</string>
 </resources>
